# vscode-mcshader

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
client/src/: extension.ts
scripts/: prepare-server-binary.js
server/: .gitignore  Cargo.toml
server/logging/: Cargo.toml
server/logging/src/: lib.rs
server/logging_macro/: Cargo.toml
server/logging_macro/src/: lib.rs
server/main/: Cargo.toml
server/main/src/: backend.rs  capability.rs  configuration.rs  constant.rs  lib.rs  main.rs  opengl.rs  progress.rs  worker.rs
server/main/src/commands/: virtual_merge.rs
server/main/src/file/: compile_cache.rs  mod.rs  temp_file.rs  workspace_file.rs
server/main/src/server/: change_file.rs  close_file.rs  document_links.rs  error.rs  find_definitions.rs  hover.rs  list_symbols.rs  mod.rs  open_file.rs  rename_files.rs  save_file.rs  update_watched_files.rs  update_workspaces.rs  utility.rs
server/main/src/tree_parser/: definition.rs  hover.rs  mod.rs  reference.rs  symbols.rs
