[package]
name = "logging"
version = "0.9.8"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2024"

[lib]
doctest = false

[dependencies]
slog = { version = "2.8.2", default-features = false, features = ["std", "max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.2"
slog-scope = "4.4.1"
slog-atomic = "3.1.0"
slog-stdlog = "4.1.1"
slog-scope-futures = "0.1.1"
log = "0.4.29"
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
logging_macro = { path = "../logging_macro" }

[lints]
workspace = true
