[package]
name = "vscode-mcshader"
version = "0.5.1"
authors = ["GeForceLegend"]
edition = "2024"
rust-version = "1.92.0"

[dependencies]
gl = "0.14"
glutin = { version = "0.29", default-features = false, features = ["x11", "wayland", "wayland-dlopen"] }
hashbrown = { version = "0.16", features = ["default", "serde"]}
itoa = "1.0"
regex = "1.12"
serde = "1.0"
serde_json = "1.0"
tower-lsp = "0.20"
tokio = { version = "1.49", features = ["full"] }
tree-sitter = "0.23"
tree-sitter-glsl = "0.2"
url = "2.5"

logging = { path = "../logging" }
logging_macro = { path = "../logging_macro" }

[dev-dependencies]

[lints]
workspace = true
